== HEAD

* [FEATURE] Add argument to treetable plugin function to force reinitialization (#65)
* [BUG] Prevent error when new rows have leading white space (#77)

== 3.0.1 - April 6, 2013

* [FEATURE] Expand/collapse nodes using keyboard Return key (#27, #30)
* [FEATURE] Allow root nodes to be added to the tree with loadBranch (#56)
* [ENHANCEMENT] Prevent potential reinitialization (#58)
* [ENHANCEMENT] Add new nodes at the end of children (#52)
* [ENHANCEMENT] Use on/off instead of bind/unbind for ataching event handlers (as per jQuery preferred guidelines)
* [BUG] Nodes wouldn't initialize properly when using loadBranch (#55)

== 3.0.0 - February 14, 2013

* [ENHANCEMENT] Use 'treetable' everywhere instead of a mix between 'treeTable' and 'treetable'

== 3.0.0-rc.2 - February 10, 2013

NOTE: This is a release candidate. Please test this version and report any
issues found.

* [FEATURE] Added (optional) tt-branch data attribute for AJAX use case
* [FEATURE] Added loadBranch()/unloadBranch() functions for adding/removing nodes to the tree (AJAX)
* [FEATURE] Added onInitialized event
* [FEATURE] Added onNodeInitialized event (#21)
* [ENHANCEMENT] Split CSS file into two files, one with basic styling required in most cases (jquery.treetable.css) and a 'theme' CSS (jquery.treetable.theme.default.css) that styles the trees like the ones in the documentation (#51)
* [ENHANCEMENT] Made appropriate plugin methods chainable
* [BUG] Having an empty data-tt-parent-id attribute would result in an error
* [BUG] A hardcoded reference to 'ttId' prevented proper use of nodeIdAttr setting

== 3.0.0-rc.1 - February 3, 2013

NOTE: This is a release candidate. Please test this version and report any
issues found.

The treeTable plugin has been completely rewritten for this release. Please
review the documentation for changes in the way the plugin is used and the
options that are supported.

* [FEATURE] Added test suite to verify plugin behavior